@@ -1,3 +1,6 @@
+* April 2, 2007 *
+
+* Check for current type of :thumbnails option.
 * allow customization of the S3 configuration file path with the :s3_config_path option.
 * Don't try to remove thumbnails if there aren't any.  Closes #3 [ben stiglitz]
 
